[package]
name = "arcwarden"
version = "0.1.2"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend", "voice"] }
songbird = "0.5"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde_json = "1.0"
rand = "0.9"