[package]
name = "arcwarden"
version = "0.3.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend", "voice"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
rand = "0.9.0"
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ethers = "2"
log = "0.4.26"